# Easy-to-play-boardgames

./: .gitignore  Dockerfile  LICENSE  README.md  chat.py  local.sqlite  main.py  pyproject.toml  requirements.txt
migrations/versions/: 0157587ea97c_create_games_3.py  0908c96c6474_.py  35b42beb3206_create_games_2.py  491dc791df6f_latest.py  65f18c6cfcaa_create_games.py  6bf94fa15e78_create_games_4.py  77b99f429c75_.py  858d2d9f9a0a_.py  8ee7b5d89a50_create_games.py  bb6406a1913d_.py  fe5334c60d8f_.py
src/: __init__.py  app.py  auth.py  config.py  db.py  forum.py  main_page.py  schema.sql
src/auth/: forms.py  views.py
src/auth/templates/auth/: index.html  login.html  register.html
src/chat/: events.py  forms.py  views.py
src/chat/templates/chat/: 1.html  create.html  index.html
src/crud/: __init__.py  forms.py  models.py  views.py
src/crud/templates/crud/: base.html  create.html  edit.html  index.html  own.html
src/files/game_file/blackjack/: index.html  script.js  style.css
src/forum/: __init__.py  forms.py  forum.py  models.py  views.py
src/forum/templates/forum/: create.html  edit.html  index.html  main.html  reply.html
src/game/: __init__.py  forms.py  models.py  views.py
src/game/templates/game/: base.html  index.html  upload.html
src/home/: views.py
src/static/: main.js  style.css
src/static/css/: style.css
src/templates/: 404.html  500.html  base.html
src/templates/auth/: login.html  register.html
src/templates/forum/: main.html  update.html
src/templates/mainpage/: main_page.html
tests/: conftest.py  test_sample.py
(+2 files in other folders)
