[project]
name = "Easy To Play Boardgames"
version = "1.0.0"
description = "2024 Capstone Design Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = "requirements.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.urls]
Homepage = "https://github.com/SquarerAtol/"
Issues = "https://github.com/SquarerAtol/"